--- a/notebooks/user_overview_analysis.ipynb
+++ b/notebooks/user_overview_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "[10 rows x 55 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "(150001, 55)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -839,6 +839,31 @@
     "   \n",
     "3. **Identify the Top 5 Handsets per Top 3 Handset Manufacturer**:\n",
     "   For each of the top three manufacturers, identify their five most popular handset models. This involves filtering the data by manufacturer and ranking the handsets within each group."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned DataFrame saved to '../data\\cleaned_data.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_folder = \"../data\"\n",
+    "os.makedirs(data_folder, exist_ok=True)\n",
+    "# Define the output file path\n",
+    "output_path = os.path.join(data_folder, \"cleaned_data.csv\")\n",
+    "\n",
+    "# Save the cleaned DataFrame to the \"Data\" folder\n",
+    "df_cleaned.to_csv(output_path, index=False)\n",
+    "\n",
+    "print(f\"Cleaned DataFrame saved to '{output_path}'\")"
    ]
   },
   {
